vpc-ec2-provisioner/subnet.tf
resource "aws_subnet" "mukesh_public_subnet_1" {
  vpc_id                  = aws_vpc.mukesh-vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1a"
  tags = {
    Name = "mukesh_public_subnet_1"
  }
}
